# doppler-ml

./: README.md  pyproject.toml
demo/: LinearRegression.ipynb
dopplerml/models/: model.py  regression.py
dopplerml/optimizers/: optimizer.py  optimizers.py
dopplerml/utils/: __init__.py  utilities.py
